@@ -2,11 +2,12 @@
 
 == Version 1.3.0 (2011-xx-xx)
 
-* Updated specs to rspec-1.3.0
 * BinData objects can now assign values when instantiating.
+* Improved support for bit-based alignment.
 * Objects deriving from BinData::Base should no longer override #initialize.
 * Added BinData::Base(#new, #initialize_instance) to speed up
   instantiation of multiple objects.
+* Updated specs to rspec-1.3.0
 * BinData::Struct.hide now expects symbols instead of strings.
 
 == Version 1.2.2 (2010-12-14)
